This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Jan 2009 (Zesstra)
  - (interpret.c, interpret.h)
    Changed ASSIGN_EVAL_COST to a static inline function assign_eval_cost_inl()
      and use it consistently in interpret.c.
    Changed MAX_SHIFT to a static const.

03-Jan 2009 (Zesstra)
  - (efuns.c, efuns.h, func_spec)
    Extended present_clone() to optionally search for the <n>th object in the
    environment.
  - (port.h)
    Cleaned up handling of gcc attributes (Assumption: gcc < 3 are out of use
      now), added __attribute__ define which evaluates to nothing if gcc is
      not used.
  - (make_func.y)
    Added NORETURN attribute to yyerror() and fatal()
    Changed fatal() from int to void.
  - (closure.c, interpret.c, simulate.h )
    Added NORETURN attribute to lambda_cerror(), lambda_cerrorl(),
    stack_overflow(), throw_error(), 
  - (port.h, main.h, comm.c, strfuns.h, closure.c)
    Added the format attributes to: time_fstring(), strbuf_addf(),
      vdebug_message(), comm_fatal(), lambda_cerror(), lambda_cerrorl()
  - (xalloc.h)
    Added the warn_unused_result attribute to xalloc_traced(),
      rexalloc_traced(), pxalloc_traced(), prexalloc_traced().
  - (mregex.c, mstrings.c, simulate.c)
    Fixed some wrong format specifiers which gcc found after using the format
    attribute on strbuf_addf().

30-Dec 2008 (Zesstra)
  - (array.h, comm.c, smalloc.c, slaballoc.c, xptmalloc.c, xalloc.c,
      sprintf.c)
    Changed some code defines and pre-compiler constants to static inline
    functions and enums (partially from Largo, thanks!)

26-Dec 2008 (Zesstra)
  - (object.c)
    Fixes a forgotten increment of a ref count in f_rename_object().
    
24-Dec 2008 (Gnomi)
  - (ed.c)
    The reference count of the filename and the exit function
    wasn't cleared in a GC. (Bug #398)
  - (prolang.y)